# techou

./: .gitignore  Cargo.toml  LICENSE.md  Readme.md  todo2.md
.cargo/: config
Design/: logo.sketch
scripts/: Monokai.tmTheme
scripts/tm2css/: Cargo.toml
scripts/tm2css/src/: main.rs  style.rs  theme.rs
site/: project.toml
site/boks/plom/: intro.md  summary.md
site/boks/plom/another/: a.md
site/boks/yon/: summary.md
site/html/: index.html
site/html/articles/: 2019-1-10-hello-jacob.html  2019-1-10-hello-world.html  2019-1-20-the-world-is-round.html
site/html/posts/: 2017-12-12-this-is-a-great-post.html  2019-1-10-hello-jacob.html  2019-1-10-r-code.html  2019-1-20-the-world-is-round.html  2019-2-4-this-is-the-name-of-the-post.html
site/pages/: rcode.md
site/plom/final/: final.md
site/posts/: first.md  gen.py  second.md  third.md
site/public/: article.html  book.html  chapter.html  list.html  page.html  post.html
site/public/js/: searcher.js
src/: article.rs  book.rs  build_cache.rs  builder.rs  config.rs  document.rs  document_operations.rs  error.rs  executor.rs  feeds.rs  front_matter.rs  io_utils.rs  lib.rs  list.rs  markdown.rs  new_post.rs  reload.rs  search.rs  server.rs  sitemap.rs  template.rs  utils.rs
src/book/: summary.rs
src/filters/: chunks.rs  mod.rs  split.rs
src/parse_event_handlers/: highlight.rs  links.rs  mod.rs  section.rs
src/server/: mod.rs  server.rs  state.rs  websocket_helper.rs
tests/: config.toml  config_tests.rs  site_tests.rs
