[package]
name = "techou"
version = "0.1.0"
authors = ["Benedikt Terhechte <terhechte@gmail.com>"]
edition = "2018"

[dependencies]
pulldown-cmark = "0.2.0"
tera = "0.11.20"
clap = "2.32.0"
notify = "4.0.6"
toml = "0.4"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0"
sha2 = "0.8.0"
rayon = "1.0"
chrono = { version = "0.4", features = ["serde"] }
copy_dir = "0.1.2"
syntect = "4.4"
#syntect = { git = "https://github.com/terhechte/syntect", branch = "master" }
#syntect = { path = "/private/tmp/syntect" }
rss = "1.0"
#actix-web = "0.7.18"
#actix = "0.7.9"
#err-derive = "0.1.5"
strsim = "0.8.0"
elasticlunr-rs = { version = "2.3", default-features = false }
ammonia = { version = "1.1" }
regex = "1.0.0"
lazy_static = "1.2.0"
sitemap = "0.3.0"
tiny_file_server = "0.1.3"
