[package]
name = "techou"
version = "0.5.0"
authors = ["Benedikt Terhechte <terhechte@gmail.com>"]
edition = "2021"

[dependencies]
pulldown-cmark = "0.9.0"
tera = "1.15.0"
clap = "3.0.5"
notify = "4.0.6"
toml = "0.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0"
sha2 = "0.10.1"
rayon = "1.0"
chrono = { version = "0.4", features = ["serde"] }
copy_dir = "0.1.2"
syntect = "4"
rss = "2.0.0"
strsim = "0.10.0"
elasticlunr-rs = { version = "2.3", default-features = false }
ammonia =  "3.1.2"
regex = "1.0.0"
lazy_static = "1.2.0"
sitemap = "0.4.1"
config = { git = "https://github.com/mehcode/config-rs", branch = "master"}
rouille = "3.5.0"
crossbeam = "0.8.1"